--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,6 +79,9 @@ header li.nav-item a.nav-link:hover::before  {
 header nav.navbar {
     padding: 10px 0;
     background-color: #fffdf0;
+    position: fixed;
+    width: 100%;
+    z-index: 50;
 }
 
 header .container {
@@ -94,7 +97,7 @@ header .container {
 /* Banner */
 
 .banner {
-    padding: 100px 0 0 0;
+    padding: 200px 0 0 0;
     background-color: #fffdf0;
 }
 
@@ -109,6 +112,7 @@ header .container {
     border-radius: 0!important;
     background-color: transparent !important;
     border-radius: 5px!important;
+    cursor: pointer;
 }
 
 .banner a:hover {
@@ -347,6 +351,11 @@ progress[value]::-webkit-progress-bar {
     background-color: #fffdf0;
     border: 1px solid #365f3c;
     border-radius: 5px;
+    color: #365f3c;
+}
+
+progress::-webkit-progress-value {
+    background: #365f3c;
 }
 
 .skills-list ul {
@@ -361,10 +370,100 @@ progress[value]::-webkit-progress-bar {
     background-color: #365f3c;
     color: #fffdf0;
     font-size: 22px;
+    position: relative;
+    padding-left: 100px;
+    border-radius: 10px;
+}
+
+.skills-list ul li:first-child {
+    margin-top: 35px;
 }
 
 .skills-list ul li img {
     filter: invert(1);
+    position: absolute;
+    top: 15px;
+    left: 40px;
+}
+
+.prog_first label {
+    margin-top: 0;
 }
 
 /* Expertise End*/
+
+/* Experience */
+
+.experience {
+    background-color: #365f3c;
+    padding: 100px 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.experience .head p {
+    color: #fffdf0;
+    margin-top: 35px;
+    width: 80%;
+}
+
+.experience a {
+    font-size: 14px!important;
+    padding: 12px 35px!important;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    border: 2px solid #fffdf0!important;
+    color: #fffdf0!important;
+    font-weight: 500!important;
+    border-radius: 0!important;
+    background-color: transparent !important;
+    border-radius: 5px!important;
+    margin-top: 25px;
+    display: inline-block;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.experience a:hover {
+    background-color: #fffdf0!important;
+    color: #365f3c !important;
+}
+
+ul.exp-1 {
+    padding: 0;
+}
+
+ul.exp-1 li {
+    list-style: none;
+    margin-bottom: 85px;
+    color: #fffdf0;
+    font-size: 20px;
+    position: relative;
+    padding-left: 85px;
+}
+
+ul.exp-1 li:last-child {
+    margin-bottom: 0;
+}
+
+ul.exp-1 li img {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.experience::before {
+    position: absolute;
+    top: 40%;
+    left: -3%;
+    content: "";
+    background: url(../Images/Polygon_1.png);
+    background-size: 20%;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: right center;
+    transform: rotate(-20deg);
+}
+
+/* Experience End */
