--- a/CSS/style.css
+++ b/CSS/style.css
@@ -82,6 +82,7 @@ header nav.navbar {
     position: fixed;
     width: 100%;
     z-index: 50;
+    box-shadow: 0 -45px 50px #000;
 }
 
 header .container {
@@ -113,6 +114,7 @@ header .container {
     background-color: transparent !important;
     border-radius: 5px!important;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .banner a:hover {
@@ -422,6 +424,7 @@ progress::-webkit-progress-value {
     display: inline-block;
     transition: all 0.3s ease-in-out;
     cursor: pointer;
+    text-decoration: none;
 }
 
 .experience a:hover {
@@ -467,3 +470,70 @@ ul.exp-1 li img {
 }
 
 /* Experience End */
+
+/* Contact */
+
+section.contact {
+    padding: 100px 0;
+    background-color: #fffdf0;
+}
+
+ul.contact_list {
+    padding: 0;
+}
+
+ul.contact_list li {
+    list-style: none;
+    margin-bottom: 85px;
+    position: relative;
+    padding: 18px 0 0 100px;
+    font-size: 22px;
+}
+
+ul.contact_list li a {
+    color: #365f3c;
+    text-decoration: none;
+}
+
+ul.contact_list li i {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 25px;
+    padding: 30px;
+    background-color: #365f3c;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color: #fffdf0;
+}
+
+ul.contact_list li::before {
+    position: absolute;
+    top: 40px;
+    left: 30px;
+    border: 1px dashed #365f3c;
+    content: "";
+    height: 150px;
+}
+
+ul.contact_list li:last-child::before{
+    display: none;
+}
+
+/* Contact End */
+
+/* footer */
+
+footer{
+    background-color: #365f3c;
+}
+
+footer p {
+    color: #fffdf0;
+}
+
+/* Footer End */
